fix(list, list-item): ui tweaks to align with other lists (#2541)

--- a/src/components/calcite-list/calcite-list.scss
+++ b/src/components/calcite-list/calcite-list.scss
@@ -7,3 +7,7 @@
     @apply box-border;
   }
 }
+
+::slotted(calcite-list-item) {
+  @apply mb-px;
+}
